app/styles/main.scss
/* ... */
.sidebar > *:not(:first-child):not(:last-child) {
	margin-bottom: 2em;
}

/* Header */
header {
	margin-bottom: 2em;
}
header h1 {
	line-height: 1;
	margin-bottom: 1em;
}
header img {
	width: 100%;
	height: auto;
}
header object:hover path {
	fill: #40a662;
}

/* Navigation */
nav {
	margin: 0 -2em 0 -2em;
}
nav ul {
	list-style: none;
}
nav li {
	position: relative;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	hyphens: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	user-select: none;
}
nav li:not(:last-child) {
	border-bottom: 3px solid #eee;
}
nav ul li > a:link,
nav ul li > a:visited,
nav ul li > label {
	background-color: #fefefe;
	font-weight: bold;
	text-decoration: none;
	display: block;
	position: relative;
	padding: 1em 2em;
}
nav ul li > label {
	color: #40a662;
	z-index: 2;
}
nav ul li > label:hover {
	color: #007369;
	cursor: pointer;
}
/*
nav a:active {
	box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
}
*/
nav .toggle {
	position: relative;
}
nav .toggle .arrow {
	color: #eee;
	font-size: 2em;
	position: absolute;
	top: .5em;
	right: 0;
}
nav .toggle:hover .arrow {
	display: block !important;
}
nav span[class^="icon-"],
nav span[class*=" icon-"] {
	font-size: 2em;
	width: 2em;
	display: inline-block;
	vertical-align: middle;
}
nav .caption {
	width: 12em;
	display: inline-block;
	vertical-align: middle;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}
nav.account .caption {
	width: 10em;
}

/* Sidebar Form */
#toggle-form:checked + .account-wrapper {
	width: 100%;
	position: absolute;
	top: 4em;
	z-index: 1;
	box-shadow: -0.5em 0.5em .5em 0.1em rgba(0, 0, 0, 0.3);
}
nav li > input {
	display: none;
}
.account form {
	background-color: #fefefe;
	padding: 0 2em 1em 2em;
	margin: 0 auto;
}
.form-input > * {
	flex: 1 100%;
	margin-bottom: 1em;
}
.form-check,
.form-button {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
}
.form-check > * {
	width: auto;
}
.account .form-check > * {
	margin-bottom: 1em;
}
.form-check > input {
	margin-right: 1em;
}
.form-button > *:last-child {
	margin-left: 1em;
}
.form-button a:link,
.form-button a:visited {
	text-align: center;
}
.pwreset {
	margin-bottom: 1em;
}

/* Main Content */
.content {
	width: 100%;
	/*max-width: 60em;*/
}
.content > *:not(:last-child) {
	margin-bottom: 1em;
}
.content h2 span {
	font-size: .55em;
}
.content h2+h3 {
	margin-top: -1.5em;
}
.content ul,
.content ol {
	padding-left: 1em;
	margin-top: 1em;
}
.content ol {
	padding-left: 1.5em;
}
.content li > ul,
.content li > ol {
	margin-top: 0;
}
.box-wrapper {
	background-color: #eee;
	padding: 1em 2em;
	border-radius: .4em;
}
.box-wrapper h3,
.box-wrapper p:not(:last-child) {
	margin-bottom: 1em;
}
.box-wrapper input:not([type="button"]):not([type="submit"]),
.box-wrapper textarea {
	background-color: #fefefe;
}

/* Pad list */
.padlist {
	width: 100%;
}
.padlist tr:not(:first-child):hover {
	background-color: #eee;
}
.padlist tr > *:first-child {
	padding-left: 1em;
}
.padlist tr > *:last-child {
	text-align: right;
	padding-right: 0;
}
.padlist tr > td:nth-child(2) {
	font-weight: bold;
}
.padlist input[type="button"] {
	min-width: 6em;
}
.padlist td.nopodcasts {
  text-align: left;
}
.load {
	max-width: 15em;
	margin: 0 auto;
}

/* Document */
.document-wrapper {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	-webkit-box-align: stretch;
	-moz-box-align: stretch;
	-webkit-align-items: stretch;
	-ms-flex-align: stretch;
	align-items: stretch;
	margin: -2em -2em;
}
.document {
	width: 80%;
	padding: 2em 0 0 2em;
}
.document-header {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
	margin-bottom: 2em;
}
.document-header > * {
	width: 50%;
	padding-right: 2em;
}
.document-meta h2+h3 {
	margin-top: 0;
	margin-bottom: 1em;
}
.sighting {
	margin-bottom: 1em;
}
.podcaster {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row;
	flex-direction: row;
}
.podcaster {
	margin-top: 1em;
}
.podcaster > *:last-child {
	margin-left: 1em;
	width: auto;
	min-width: 7em;
}
.shownoter input {
	float: right;
	width: auto;
}

/* Chat */
.chat {
	width: 20%;
	height: 100vh;
	overflow-x: scroll;
}
.chat p {
	font-size: .8em;
	padding: .25em;
}
.chat p:last-of-type {
	margin-bottom: 5.625em;
}
.chat time {
	float: right;
	padding: .25em;
	opacity: .5;
}
.chat-input {
	background-color: #fefefe;
	position: fixed;
	bottom: 0;
	box-shadow: 0.5em -0.5em .5em 0.1em rgba(0, 0, 0, 0.3);
}
.chat-input > * {
	border-radius: 0;
}

/* User profiles */
ul.profile {
	display: table;
	padding: 0;
}
ul.profile li {
	display: table-row;
}
ul.profile li:before {
	display: table-cell;
	content: attr(data-social) ':';
	font-weight: bold;
	padding-right: 1em;
}
.profile-edit > *:not(:last-child) {
	margin-bottom: 1em;
}
.profile-edit > input:last-of-type {
	display: inline-block;
	max-width: 15em;
	margin-right: 1em;
}
.profile-edit textarea {
	height: 7em;
}

/* Styleguide */
.colorblock {
	width: 5em;
	height: 5em;
	position: relative;
	border: 3px solid #111;
	border-radius: .4em;
}
.colorblock span {
	line-height: 1.6;
	position: absolute;
	top: 0;
	left: 6em;
	width: 10em;
}

/* Importer Logs */
.importerlog {
	table {
		td {
			vertical-align: top;
			border: 3px solid #eee;
		}
	}

	.succeeded {
		background-color: #00AF00;
	}
	.failed {
		background-color: #AF0000;
	}
}

/* Misc */
.rules > *:not(:last-child) {
	margin-bottom: 1em;
}

/**
 * (C)Leanest CSS spinner ever
 * http://lea.verou.me/2013/11/cleanest-css-spinner-ever/
 */

@keyframes spin {
	to { transform: rotate(1turn); }
}
/* ... */

